# drone-mavros

./: .gitignore  .gitmodules  README.md
src/depth_camera_publisher/: CMakeLists.txt  package.xml  setup.py
src/depth_camera_publisher/launch/: publish_depth_camera_info.launch
src/depth_camera_publisher/src/: sensor_registerer.py
src/depth_camera_publisher/src/depth_camera_publisher/: sensor_registerer.py
src/hexacopter_launch/: CMakeLists.txt  package.xml
src/hexacopter_launch/launch/: drone2_sim.launch  drone_sim.launch
src/hexacopter_launch/models/typhoon_h480_ardupilot/: model.config  typhoon_updated_kinect.sdf
src/hexacopter_launch/models/typhoon_h480_ardupilot_9002/: model.config  typhoon_updated_kinect.sdf
src/hexacopter_launch/models/typhoon_h480_ardupilot_9012/: model.config  typhoon_updated_kinect.sdf
src/hexacopter_launch/rviz/: depth_camera.rviz
src/hexacopter_launch/scripts/: start_ardupilot.sh  start_second_ardupilot.sh
src/hexacopter_launch/worlds/: typhoon_ardupilot.world
src/server_connector/: CMakeLists.txt  package.xml  setup.py
src/server_connector/launch/: drone.launch  start_connection.launch
src/server_connector/src/: connect_to_server.py  connection_manager.py  topic_publisher.py
src/server_connector/src/server_connector/: connect_to_server.py  connection_manager.py  topic_publisher.py
src/server_connector/srv/: AdvertiseService.srv  PublishTopic.srv
